Bug 52007 Menu accelerators don't work if alt held down patch by jruderman@hmc.edu r=akkana sr=kin a=asa